--- a/YCTest/Web.config
+++ b/YCTest/Web.config
@@ -52,6 +52,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="GemBox.Spreadsheet" publicKeyToken="b1b72c69714d4847" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-43.0.35.1127" newVersion="43.0.35.1127" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
