--- a/YCTest/YCTest.csproj
+++ b/YCTest/YCTest.csproj
@@ -55,16 +55,19 @@
     <Reference Include="NLog, Version=5.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.5.3.2\lib\net46\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="PSTFrame.Data">
+    <Reference Include="PSTFrame.Data, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\PSTFram.MVC\PSTFrame.Data.dll</HintPath>
     </Reference>
-    <Reference Include="PSTFrame.Data.Dapper">
+    <Reference Include="PSTFrame.Data.Dapper, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\PSTFram.MVC\PSTFrame.Data.Dapper.dll</HintPath>
     </Reference>
     <Reference Include="PSTFrame.MVC">
       <HintPath>..\lib\PSTFram.MVC\PSTFrame.MVC.dll</HintPath>
     </Reference>
-    <Reference Include="PSTFrame.Utility">
+    <Reference Include="PSTFrame.Utility, Version=1.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\PSTFram.MVC\PSTFrame.Utility.dll</HintPath>
     </Reference>
     <Reference Include="System" />
